--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,16 +1,15 @@
 <div class="items-sell-contents">
   <header class="items-sell-header">
     <%= link_to image_tag('furima-logo-color.png' , size: '185x50'), "/" %>
-
   </header>
   <div class="items-sell-main">
-    <h2 class="items-sell-title">商品の情報を入力</h2>
-    <%= form_with model:@item, local: true do |f| %>
+   <h2 class="items-sell-title">商品の情報を入力</h2>
+    <%= form_with(model: @item, local: true) do |f| %>
 
-    <%= render 'shared/error_messages', model: f.object %>
+      <%= render 'shared/error_messages', model: f.object %>
 
-    <%# 出品画像 %>
-    <div class="img-upload">
+     <%# 出品画像 %>
+     <div class="img-upload">
       <div class="weight-bold-text">
         出品画像
         <span class="indispensable">必須</span>
@@ -21,10 +20,10 @@
         </p>
         <%= f.file_field :image, id:"item-image" %>
       </div>
-    </div>
-    <%# /出品画像 %>
-    <%# 商品名と商品説明 %>
-    <div class="new-items">
+     </div>
+     <%# /出品画像 %>
+     <%# 商品名と商品説明 %>
+     <div class="new-items">
       <div class="weight-bold-text">
         商品名
         <span class="indispensable">必須</span>
@@ -37,11 +36,11 @@
         </div>
         <%= f.text_area :description, class:"items-text", id:"item-info", placeholder:"商品の説明（必須 1,000文字まで）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。" ,rows:"7" ,maxlength:"1000" %>
       </div>
-    </div>
-    <%# /商品名と商品説明 %>
+     </div>
+     <%# /商品名と商品説明 %>
 
-    <%# 商品の詳細 %>
-    <div class="items-detail">
+     <%# 商品の詳細 %>
+     <div class="items-detail">
       <div class="weight-bold-text">商品の詳細</div>
       <div class="form">
         <div class="weight-bold-text">
@@ -55,16 +54,16 @@
         </div>
         <%= f.collection_select(:condition_id, Condition.all, :id, :name, {}, {class:"select-box", id:"item-sales-status"}) %>
       </div>
-    </div>
-    <%# /商品の詳細 %>
+     </div>
+     <%# /商品の詳細 %>
 
-    <%# 配送について %>
-    <div class="items-detail">
-      <div class="weight-bold-text question-text">
+     <%# 配送について %>
+     <div class="items-detail">
+       <div class="weight-bold-text question-text">
         <span>配送について</span>
         <a class="question" href="#">?</a>
-      </div>
-      <div class="form">
+       </div>
+       <div class="form">
         <div class="weight-bold-text">
           配送料の負担
           <span class="indispensable">必須</span>
@@ -80,12 +79,12 @@
           <span class="indispensable">必須</span>
         </div>
         <%= f.collection_select(:shipment_date_id, ShipmentDate.all, :id, :name, {}, {class:"select-box", id:"item-scheduled-delivery"}) %>
-      </div>
-    </div>
-    <%# /配送について %>
+       </div>
+     </div>
+     <%# /配送について %>
 
-    <%# 販売価格 %>
-    <div class="sell-price">
+     <%# 販売価格 %>
+     <div class="sell-price">
       <div class="weight-bold-text question-text">
         <span>販売価格<br>(¥300〜9,999,999)</span>
         <a class="question" href="#">?</a>
@@ -112,11 +111,11 @@
         </div>
         </span>
       </div>
-    </div>
-    <%# /販売価格 %>
+     </div>
+     <%# /販売価格 %>
 
-    <%# 注意書き %>
-    <div class="caution">
+     <%# 注意書き %>
+     <div class="caution">
       <p class="sentence">
         <a href="#">禁止されている出品、</a>
         <a href="#">行為</a>
@@ -132,16 +131,17 @@
         <a href="#">加盟店規約</a>
         に同意したことになります。
       </p>
-    </div>
-    <%# /注意書き %>
-    <%# 下部ボタン %>
-    <div class="sell-btn-contents">
+     </div>
+     <%# /注意書き %>
+     <%# 下部ボタン %>
+     <div class="sell-btn-contents">
       <%= f.submit "出品する" ,class:"sell-btn" %>
       <%=link_to 'もどる', root_path, class:"back-btn" %>
-    </div>
+     </div>
+    <% end %>
     <%# /下部ボタン %>
-  </div>
-  <% end %>
+ </div>
+  
 
   <footer class="items-sell-footer">
     <ul class="menu">
